# bitcoin_rust

./: .gitignore  Cargo.toml  README.md
blockchain.db/: 000028.ldb  LOG  LOG.old  MANIFEST-000025
src/: bcdb.rs  block.rs  blockchain.rs  cli.rs  main.rs  proofofwork.rs  transaction.rs  utils.rs
