[package]
name = "blockchain1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.3"
num-bigint = "0.4.0"
bincode = "1.3.3"
serde = { version = "1.0.182", features = ["derive"] }
leveldb = "0.8.6"
byteorder = "1.4.3"
hex = "0.4.3"